<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dip" >

        <Button
            android:id="@+id/Button01"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Button03"
            android:layout_alignBottom="@+id/Button03"
            android:layout_toLeftOf="@+id/Button02"
            android:layout_toRightOf="@+id/Button03"
            android:layout_weight="0.12"
            android:text="@string/test2"
            android:background="@drawable/blue_button" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/hello3" 
            android:textColor="#010101"/>

        <Button
            android:id="@+id/Button03"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView02"
            android:layout_below="@+id/TextView02"
            android:layout_marginTop="14dp"
            android:layout_weight="0.11"
            android:text="@string/test"
            android:background="@drawable/blue_button" />

        <Button
            android:id="@+id/Button02"
             android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/TextView02"
            android:layout_alignTop="@+id/Button01"
            android:layout_weight="0.50"
            android:text="@string/test3"
            android:background="@drawable/blue_button" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:layout_weight="0.20"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dip" >

        <CheckBox
            android:id="@+id/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/run"
            android:layout_below="@+id/run"
            android:layout_marginTop="6dp"
            android:text="@string/read" />

        <CheckBox
            android:id="@+id/run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/swim"
            android:layout_below="@+id/swim"
            android:layout_marginTop="12dp"
            android:text="@string/run" />

        <CheckBox
            android:id="@+id/swim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="39dp"
            android:text="@string/swim" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/hello2"
            android:textColor="#010101" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView1"
            android:layout_below="@+id/read"
            android:layout_marginRight="28dp"
            android:text="@string/string3"
            android:background="@drawable/blue_button" /> 
    </RelativeLayout>

</LinearLayout>